--- a/CSS/index.html
+++ b/CSS/index.html
@@ -13,16 +13,22 @@
         color: white;
       }
     </style>
+    <!-- Tipo grafia -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- CSS IN-LINE -->
     <nav style="background-color: deepskyblue;">
-      <div>Logo</div>
       <div>
-        <p>Inicio</p>
-        <p>Productos</p>
-        <p>FAQ</p>
-        <button>Contactame</button>
+        <p>Logo</p>
+      </div>
+      <div>
+        <p class="hover">Inicio</p>
+        <p class="hover">Productos</p>
+        <p class="hover">FAQ</p>
+        <button id="contacto">Contactame</button>
       </div>
     </nav>
   </body>
