--- a/SASS/index.html
+++ b/SASS/index.html
@@ -7,8 +7,26 @@
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
-    <div id="inicial">
+    <div id="inicial" class="columna-centrada">
       <p>Hola mundo</p>
+    </div>
+    <div class="columna-top">
+      <p>Hola mundo</p>
+    </div>
+    <div class="blogs">
+      <div class="blog">
+        <h3>Esto es un blog</h3>
+        <p>Descripcion del blog</p>
+      </div>
+      <div class="blog">
+        <h3>Esto es un blog</h3>
+        <p>Descripcion del blog</p>
+        <button>Leer mas</button>
+      </div>
+      <div class="blog">
+        <h3>Esto es un blog</h3>
+        <p>Descripcion del blog</p>
+      </div>
     </div>
   </body>
 </html>
